Added notes on opening files

--- a/05_intro_to_error_handling.ipynb
+++ b/05_intro_to_error_handling.ipynb
@@ -10,6 +10,124 @@
   },
   {
    "cell_type": "markdown",
+   "id": "43db9d3b",
+   "metadata": {},
+   "source": [
+    "Learning to work with files and save data makes your programs more practical and user-friendly. It allows users to decide what information to input and when to do so. They can use the program, save their progress, close it, and later reopen it to continue from where they stopped, without losing any work."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8704c724",
+   "metadata": {},
+   "source": [
+    "#### The ```open()``` function\n",
+    "\n",
+    "The open() function in Python is used to access files so you can read, write, or add new data to them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81b1c493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open(file, mode='r')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4a2c706",
+   "metadata": {},
+   "source": [
+    "The first argument is the file name (or its full path), and the second is the mode, which tells Python what you want to do with the file.\n",
+    "\n",
+    "Here are the common modes:\n",
+    "\n",
+    "        'r': read (default). Opens a file for reading.\n",
+    "\n",
+    "        'w': write. Creates a new file or replaces the content if it already exists.\n",
+    "\n",
+    "        'a': append. Opens a file and adds new content to the end.\n",
+    "\n",
+    "        'b': binary mode (used for non-text files like images).\n",
+    "\n",
+    "        't': text mode (default).\n",
+    "\n",
+    "        '+': read and write."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1d48cf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you can open a file using just the open function like this:\n",
+    "file = open('example.txt', mode='r')\n",
+    "# do something with the file\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f0f9477",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you can also use a with statement to open a file, which automatically closes the file for you when you're done (recommended):\n",
+    "with open('example.txt', mode='r') as file:\n",
+    "    # do something with the file\n",
+    "    content = file.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d07608c6",
+   "metadata": {},
+   "source": [
+    "The with statement in Python is used to manage resources like files safely and automatically. It uses a context manager, which handles setup and cleanup for you.\n",
+    "\n",
+    "Any indented code inside the with block works with the file (like reading or writing). Once the block ends, Python automatically closes the file, even if an error occurs. This makes your code cleaner and prevents file-handling mistakes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1849d65a",
+   "metadata": {},
+   "source": [
+    "#### Reading Files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdeaf379",
+   "metadata": {},
+   "source": [
+    "Reading files in Python is simple. By default, the open() function opens files in read-only mode if no mode is specified.\n",
+    "\n",
+    "Text files can hold all kinds of data. Reading from them lets you analyze or transform stored information. For example, you might load a text file and reformat it so a browser can display it better.\n",
+    "\n",
+    "To work with a file, you first read its contents into memory. You can then process the entire file at once or handle it line by line, depending on your goal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dbe0916",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('example.txt') as file:\n",
+    "    for line in file:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5a51baba",
    "metadata": {},
    "source": [
