Added gitignore and test examples

--- a/05_intro_to_error_handling.ipynb
+++ b/05_intro_to_error_handling.ipynb
@@ -128,6 +128,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5c27dc9c",
+   "metadata": {},
+   "source": [
+    " This code will open the text file and then loop over each line in the file and print it out. \n",
+    "\n",
+    "You could also loop over the lines in a file by reading the entire file into memory (not recommended as you may run out of memory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2292daa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('example.txt') as file_handler:\n",
+    "    lines = file_handler.readlines()\n",
+    "    for line in lines:\n",
+    "        print(line)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5a51baba",
    "metadata": {},
    "source": [
@@ -141,11 +164,224 @@
    "source": [
     "### **Testing**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "090b9913",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytest\n",
+    "\n",
+    "def squared(number):\n",
+    "    return number * number\n",
+    "\n",
+    "def test_squared():\n",
+    "    assert squared(-2) == squared(2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "da76f5e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def division(a, b):\n",
+    "    return a / b\n",
+    "\n",
+    "def test_division():\n",
+    "    with pytest.raises(ZeroDivisionError):\n",
+    "        division(a=25, b=0)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "342e188e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiple_of_two(num):\n",
+    "    if num == 0:\n",
+    "        raise(ValueError)\n",
+    "    return num % 2 == 0\n",
+    "\n",
+    "def test_value():\n",
+    "    assert multiple_of_two(4) == True\n",
+    "    assert multiple_of_two(5) == False\n",
+    "\n",
+    "@pytest.mark.skip\n",
+    "def test_zero_value():\n",
+    "    with pytest.raises(ValueError):\n",
+    "        multiple_of_two(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "045e4cf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gen_sequence(n):\n",
+    "    return list(range(1, n+1))\n",
+    "\n",
+    "def test_gen_seq():\n",
+    "    assert gen_sequence(5) == [1, 2, 3, 4, 5]\n",
+    "\n",
+    "@pytest.mark.xfail\n",
+    "def test_gen_sequence():\n",
+    "    assert gen_sequence(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "99988a54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "Running: Square\n",
+      "============================================================\n",
+      "✅ Square PASSED\n",
+      "\n",
+      "============================================================\n",
+      "Running: Division\n",
+      "============================================================\n",
+      "✅ Division PASSED\n",
+      "\n",
+      "============================================================\n",
+      "Running: Multiple of Two\n",
+      "============================================================\n",
+      "✅ Multiple of Two PASSED\n",
+      "\n",
+      "============================================================\n",
+      "Running: Zero value\n",
+      "============================================================\n",
+      "✅ Zero value PASSED\n",
+      "\n",
+      "============================================================\n",
+      "Running: Generated sequence\n",
+      "============================================================\n",
+      "✅ Generated sequence PASSED\n",
+      "\n",
+      "============================================================\n",
+      "Running: Generated sequence with negative input\n",
+      "============================================================\n",
+      "\n",
+      "❌ Generated sequence with negative input FAILED\n",
+      "Assertion Error: \n",
+      "\n",
+      "============================================================\n",
+      "Test Results: 5 passed, 1 failed, 0 skipped\n",
+      "❌ 1 TEST(S) FAILED\n",
+      "============================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\AMANDA\\AppData\\Local\\Temp\\ipykernel_764\\1121395519.py\", line 23, in <module>\n",
+      "    test_func()\n",
+      "    ~~~~~~~~~^^\n",
+      "  File \"C:\\Users\\AMANDA\\AppData\\Local\\Temp\\ipykernel_764\\3852082332.py\", line 9, in test_gen_sequence\n",
+      "    assert gen_sequence(-1)\n",
+      "           ~~~~~~~~~~~~^^^^\n",
+      "AssertionError\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run all tests\n",
+    "if __name__ == \"__main__\":\n",
+    "\n",
+    "    \n",
+    "    tests = [\n",
+    "        (\"Square\", test_squared),\n",
+    "        (\"Division\", test_division),\n",
+    "        (\"Multiple of Two\", test_value),\n",
+    "        (\"Zero value\", test_zero_value),\n",
+    "        (\"Generated sequence\", test_gen_seq),\n",
+    "        (\"Generated sequence with negative input\", test_gen_sequence),\n",
+    "    ]\n",
+    "    \n",
+    "    passed = 0\n",
+    "    failed = 0\n",
+    "    skipped = 0\n",
+    "    \n",
+    "    for test_name, test_func in tests:\n",
+    "        try:\n",
+    "            print(f\"\\n{'='*60}\")\n",
+    "            print(f\"Running: {test_name}\")\n",
+    "            print(f\"{'='*60}\")\n",
+    "            test_func()\n",
+    "            \n",
+    "            # Check if test was skipped\n",
+    "            if \"skipped\" in test_name.lower() or test_func.__doc__ and \"NOT IMPLEMENTED\" in test_func.__doc__:\n",
+    "                skipped += 1\n",
+    "            else:\n",
+    "                passed += 1\n",
+    "                print(f\"✅ {test_name} PASSED\")\n",
+    "        except AssertionError as e:\n",
+    "            failed += 1\n",
+    "            print(f\"\\n❌ {test_name} FAILED\")\n",
+    "            print(f\"Assertion Error: {e}\")\n",
+    "            import traceback\n",
+    "            traceback.print_exc()\n",
+    "        except Exception as e:\n",
+    "            failed += 1\n",
+    "            print(f\"\\n❌ {test_name} ERROR\")\n",
+    "            print(f\"Error: {e}\")\n",
+    "            import traceback\n",
+    "            traceback.print_exc()\n",
+    "    \n",
+    "    print(\"\\n\" + \"=\" * 60)\n",
+    "\n",
+    "    print(f\"Test Results: {passed} passed, {failed} failed, {skipped} skipped\")\n",
+    "    if failed == 0:\n",
+    "        print(\"✅ ALL IMPLEMENTED TESTS PASSED!\")\n",
+    "    else:\n",
+    "        print(f\"❌ {failed} TEST(S) FAILED\")\n",
+    "    print(\"=\" * 60)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95f5dfb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
