Added Exercises for file handling

--- a/05_intro_to_files_exceptions_testing.ipynb
+++ b/05_intro_to_files_exceptions_testing.ipynb
@@ -89,9 +89,71 @@
    "id": "d07608c6",
    "metadata": {},
    "source": [
-    "The with statement in Python is used to manage resources like files safely and automatically. It uses a context manager, which handles setup and cleanup for you.\n",
+    "The 'with' statement in Python is used to manage resources like files safely and automatically. It uses a context manager, which handles setup and cleanup for you.\n",
     "\n",
     "Any indented code inside the with block works with the file (like reading or writing). Once the block ends, Python automatically closes the file, even if an error occurs. This makes your code cleaner and prevents file-handling mistakes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c8edb48",
+   "metadata": {},
+   "source": [
+    "#### Relative and Absolute Paths"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4607abd6",
+   "metadata": {},
+   "source": [
+    "When working with files, Python needs to know where the file is located.\n",
+    "\n",
+    "A relative path points to a file based on the location of your current program.\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1caed5a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "path = Path('text_files/filename.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad509718",
+   "metadata": {},
+   "source": [
+    "This means “look for a file named filename.txt inside the text_files folder next to my program.”\n",
+    "\n",
+    "An absolute path gives the full address of the file from your system’s root directory.\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "158afbdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = Path('/home/user/data/text_files/filename.txt')\n",
+    "# or on Windows\n",
+    "path = Path('C:/Users/User/data/text_files/filename.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccd71e41",
+   "metadata": {},
+   "source": [
+    "On Windows, paths usually show backslashes (\\), but in code you should still use forward slashes (/). Python’s pathlib will automatically handle the right format for your system."
    ]
   },
   {
@@ -151,10 +213,276 @@
   },
   {
    "cell_type": "markdown",
+   "id": "df691e6b",
+   "metadata": {},
+   "source": [
+    "If a file is small, you can read the whole thing at once using read():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78b4d55b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('example.txt') as file_handler:\n",
+    "    file_contents = file_handler.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca9e484d",
+   "metadata": {},
+   "source": [
+    "This reads the entire file into memory and stores it in file_contents.\n",
+    "\n",
+    "For larger files, you can read in chunks by specifying the number of bytes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47852ce7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    with open('example.txt') as file_handler:\n",
+    "        data = file_handler.read(1024)  # read 1024 bytes\n",
+    "    if not data:\n",
+    "        break\n",
+    "    print(data)\n",
+    "\n",
+    "# The loop stops when read() returns an empty string."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41fa31ac",
+   "metadata": {},
+   "source": [
+    "Binary files are files that store data in a format not meant to be read as text.\n",
+    "\n",
+    "Examples include images, PDFs, audio, video, and executable programs. Unlike text files, they contain raw bytes, so opening them in a text editor usually shows gibberish.\n",
+    "\n",
+    "For binary files, combine 'r' with 'b':"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33b81be9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('example.pdf', 'rb') as file_handler:\n",
+    "    file_contents = file_handler.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a43f17de",
+   "metadata": {},
+   "source": [
+    "Here 'rb' opens the file in read-only binary mode. Printing file_contents will usually show unreadable characters, since binary files aren’t human-readable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a41dda38",
+   "metadata": {},
+   "source": [
+    "#### Writing Files\n",
+    "\n",
+    "Writing files in Python works much like reading them, but you change the mode to 'w' for write mode (or 'wb' for binary). Be careful, if the file already exists, it’ll be overwritten without warning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e745bace",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('example.txt', 'w') as file:\n",
+    "    file.write('This is a test\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62390665",
+   "metadata": {},
+   "source": [
+    "If you want to write several lines at once, use writelines() with a list of strings:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89e3e138",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines = ['First line\\n', 'Second line\\n']\n",
+    "with open('example.txt', 'w') as file:\n",
+    "    file.writelines(lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5309dc7e",
+   "metadata": {},
+   "source": [
+    "You can check if a file exists before writing using ```os.path.exists()``` from the os module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faa46ff5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "if os.path.exists('example.txt'):\n",
+    "    print(\"File exists\")\n",
+    "else:\n",
+    "    print(\"File not found\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a52fc34",
+   "metadata": {},
+   "source": [
+    "You can also use a full or relative path, like:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b9a9d5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.path.exists('text_files/data.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcf3f539",
+   "metadata": {},
+   "source": [
+    "#### Seeking within a File\n",
+    "The seek() method lets you move the read/write cursor to a specific point in a file. It helps when you don’t want to read a file from the start.\n",
+    "\n",
+    "It takes two arguments:\n",
+    "\n",
+    "- offset: how many bytes to move\n",
+    "\n",
+    "- whence: where to start moving from (0 = start, 1 = current position, 2 = end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87fa6940",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('example.txt') as file_handler:\n",
+    "    file_handler.seek(4)     # move 4 bytes from the start\n",
+    "    chunk = file_handler.read()\n",
+    "    print(chunk)\n",
+    "\n",
+    "# This prints everything after the first 4 bytes of the file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "449cbe24",
+   "metadata": {},
+   "source": [
+    "#### Appending to Files\n",
+    "\n",
+    "You can also append (add) new date to a file that already exists using the 'a' mode (append mode). \n",
+    "\n",
+    "It adds the new data to the file if it exists but if the file doesn't exist Python will create the file and then add the new data to it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bc26a05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('example.txt', 'a') as file:\n",
+    "    file.write('Appending this line.\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b50524d",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3869cf70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a new file called notes.txt and write three lines of text into it.\n",
+    "# Open notes.txt and print its entire content to the screen.\n",
+    "# Open notes.txt and print each line separately using a loop.\n",
+    "# Add a new line of text to notes.txt without deleting the existing content.\n",
+    "# Read notes.txt and count how many lines it contains.\n",
+    "# Read the file and print how many words it has\n",
+    "# Read from notes.txt and write its contents to a new file called copy.txt.\n",
+    "# Create a list of strings and use writelines() to write them to a file.\n",
+    "# Create a folder named texts, place a file inside, and read it using a relative path."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5a51baba",
    "metadata": {},
    "source": [
-    "### **Error Handling**"
+    "### **Exceptions**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04e34916",
+   "metadata": {},
+   "source": [
+    "#### Catching File Exceptions\n",
+    "\n",
+    "When working with files, errors can happen — for example, if you don’t have permission to read or write a file. In such cases, Python raises an OSError.\n",
+    "\n",
+    "To prevent your program from crashing, you can handle these errors using try-except blocks."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ac330fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    with open('example.txt', 'r') as file:\n",
+    "        data = file.read()\n",
+    "except OSError:\n",
+    "    print(\"Error: could not open or read the file.\")\n",
+    "\n",
+    "# if an OSError occurs, the program will print the error message instead of crashing"
    ]
   },
   {
