--- a/06_intro_to_numpy.ipynb
+++ b/06_intro_to_numpy.ipynb
@@ -1,6 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bf5836a4",
+   "metadata": {},
+   "source": [
+    "#### **Creating a Virtual Environment and Installing Packages**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d2672a3",
+   "metadata": {},
+   "source": [
+    "#### What's a venv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d64fec9",
+   "metadata": {},
+   "source": [
+    "#### How to create a venv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af5f9b76",
+   "metadata": {},
+   "source": [
+    "write instructions to create a venv and install numpy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "158c0490",
+   "metadata": {},
+   "source": [
+    "#### **Installing Packages with pip**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "a9167020-dc93-4355-b3db-45adbf83427a",
@@ -754,14 +794,6 @@
    "source": [
     "a[a > b]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6090c5a6-5e7e-411f-a617-cab06331b885",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
