added notes on exceptions

--- a/05_intro_to_files_exceptions_testing.ipynb
+++ b/05_intro_to_files_exceptions_testing.ipynb
@@ -459,6 +459,218 @@
   },
   {
    "cell_type": "markdown",
+   "id": "13c1c66f",
+   "metadata": {},
+   "source": [
+    "Exceptions are errors that stop your Python code when something goes wrong.\n",
+    "Instead of crashing, Python lets you **catch** them and handle the problem safely.\n",
+    "\n",
+    "Here are 15 common ones:\n",
+    "\n",
+    "1. **SyntaxError** – your code is written wrong.\n",
+    "2. **IndentationError** – wrong spacing/indentation.\n",
+    "3. **NameError** – you used a variable that doesn’t exist.\n",
+    "4. **TypeError** – wrong type used (e.g., adding str + int).\n",
+    "5. **ValueError** – right type, but wrong value.\n",
+    "6. **KeyError** – missing key in a dictionary.\n",
+    "7. **IndexError** – list index out of range.\n",
+    "8. **AttributeError** – calling something that the object doesn’t have.\n",
+    "9. **ImportError** – module can’t be imported.\n",
+    "10. **ModuleNotFoundError** – the module doesn’t exist.\n",
+    "11. **ZeroDivisionError** – dividing by zero.\n",
+    "12. **FileNotFoundError** – file doesn’t exist.\n",
+    "13. **IOError / OSError** – general file or OS-level errors.\n",
+    "14. **RuntimeError** – something went wrong during execution.\n",
+    "15. **StopIteration** – iterator has no more items (usually in loops/generators).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12606f8b",
+   "metadata": {},
+   "source": [
+    "#### Try and Except\n",
+    "\n",
+    "Python uses try/except to handle errors without crashing your program.\n",
+    "You put risky code in the try block, and if a specific error happens, the matching except block runs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fae5681",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# don't run this\n",
+    "try:\n",
+    "    # risky code\n",
+    "except SomeError:\n",
+    "    # handle it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a898195",
+   "metadata": {},
+   "source": [
+    "You can also write an except without specifying the error type (a bare except), but this is discouraged because it catches every error and hides what actually went wrong. That makes debugging harder."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b1fe2dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    with open('example.txt') as file_handler:\n",
+    "        for line in file_handler:\n",
+    "            print(line)\n",
+    "except:\n",
+    "    print('Anerroroccurred')\n",
+    "\n",
+    "# bad practice\n",
+    "# if something unexpected happens, you won’t know the real cause."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "339a5ba7",
+   "metadata": {},
+   "source": [
+    "It’s better to catch only the errors you expect and know how to handle.\n",
+    "\n",
+    "You can catch multiple exceptions either by writing multiple except blocks:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98579c9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    with open('example.txt') as file_handler:\n",
+    "        for line in file_handler:\n",
+    "            print(line)\n",
+    "    import something\n",
+    "except OSError:\n",
+    "    print(\"File problem\")\n",
+    "except ImportError:\n",
+    "    print(\"Import problem\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84f3f58c",
+   "metadata": {},
+   "source": [
+    "or by grouping them in a tuple:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb45e048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    with open('example.txt') as file_handler:\n",
+    "        for line in file_handler:\n",
+    "            print(line)\n",
+    "    import something\n",
+    "except (OSError, ImportError):\n",
+    "    print(\"An error occurred\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f94aeb71",
+   "metadata": {},
+   "source": [
+    "Grouping is shorter, but it makes it harder to tell which exception actually happened.\n",
+    "\n",
+    "This is the main idea: use try/except to handle specific errors safely, avoid bare excepts, and only catch what you understand and can fix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cee08c7",
+   "metadata": {},
+   "source": [
+    "#### Raising Exceptions\n",
+    "\n",
+    "After catching an exception, you can choose what to do next (print a message, log the error, or re-raise the exception if the situation is serious enough that the program shouldn’t continue).\n",
+    "\n",
+    "Raising an exception means you deliberately trigger an error.\n",
+    "You do this when something important is missing or invalid, and you want the program to stop or alert the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3ff0346",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example of raising an exception inside a try:\n",
+    "\n",
+    "try:\n",
+    "    raise ImportError\n",
+    "except ImportError:\n",
+    "    print(\"Caught an ImportError\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53777532",
+   "metadata": {},
+   "source": [
+    "You can raise exceptions with custom messages:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddd36c80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raise Exception(\"Something bad happened!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82069ecd",
+   "metadata": {},
+   "source": [
+    "If you raise an exception without a message, it just shows the exception type:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raise Exception"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f9a4ae7",
+   "metadata": {},
+   "source": [
+    "Raising exceptions is useful when you want to enforce rules, handle special cases, or stop execution when something is wrong."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "04e34916",
    "metadata": {},
    "source": [
