More notes on exceptions

--- a/05_intro_to_files_exceptions_testing.ipynb
+++ b/05_intro_to_files_exceptions_testing.ipynb
@@ -671,6 +671,103 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e66b283",
+   "metadata": {},
+   "source": [
+    "#### The *finally* Statement\n",
+    "\n",
+    "The finally block is a part of try statements that always runs, no matter what happens.\n",
+    "Even if:\n",
+    "\n",
+    "- an exception occurs,\n",
+    "\n",
+    "- the exception is handled,\n",
+    "\n",
+    "- or the exception is not handled,\n",
+    "\n",
+    "…the code in finally still runs.\n",
+    "\n",
+    "It’s mainly used for cleanup (things that must happen whether your code succeeds or fails.)\n",
+    "Examples: closing a file, closing a database connection, releasing resources, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfad9d13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try / except / finally (error handled)\n",
+    "\n",
+    "try:\n",
+    "    x = 1 / 0        # error happens here\n",
+    "except ZeroDivisionError:\n",
+    "    print(\"Can't divide by zero\")\n",
+    "finally:\n",
+    "    print(\"Done cleaning up\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20135088",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try / finally (error NOT handled)\n",
+    "\n",
+    "try:\n",
+    "    x = 1 / 0        # error happens here\n",
+    "finally:\n",
+    "    print(\"Done cleaning up\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce7b6b3b",
+   "metadata": {},
+   "source": [
+    "#### The *else* Statement\n",
+    "else runs only when the try block finishes with no errors.\n",
+    "If an exception happens, else is skipped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e5e760f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try / except / else (error)\n",
+    "try:\n",
+    "    print(\"Inside try\")\n",
+    "except IOError:\n",
+    "    print(\"IOError happened\")\n",
+    "else:\n",
+    "    print(\"No errors, so else runs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eb27950",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# try / except / else (no error)\n",
+    "try:\n",
+    "    raise IOError\n",
+    "    print(\"This will never run\")\n",
+    "except IOError:\n",
+    "    print(\"IOError happened\")\n",
+    "else:\n",
+    "    print(\"No errors, so else runs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "04e34916",
    "metadata": {},
    "source": [
@@ -695,6 +792,64 @@
     "    print(\"Error: could not open or read the file.\")\n",
     "\n",
     "# if an OSError occurs, the program will print the error message instead of crashing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f715cbe4",
+   "metadata": {},
+   "source": [
+    "#### *FileNotFoundError*\n",
+    "\n",
+    "Instead of getting an error when python can't find a file, it can be handled by wrapping the file-reading line inside a try/except. If the file is missing, a clean message is displayed instead of a long traceback."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3ce0ce2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "path = Path('alice.txt')\n",
+    "\n",
+    "try:\n",
+    "    contents = path.read_text(encoding='utf-8')\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Sorry, the file {path} does not exist.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf641436",
+   "metadata": {},
+   "source": [
+    "Sometimes you don’t want to show any error message when something goes wrong.\n",
+    "You just want the code to keep running normally.\n",
+    "\n",
+    "To do that, you use pass inside the except block."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78aa7c3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_words(path):\n",
+    "    try:\n",
+    "        text = path.read_text(encoding='utf-8')\n",
+    "    except FileNotFoundError:\n",
+    "        pass   # do nothing if file is missing\n",
+    "    else:\n",
+    "        words = text.split()\n",
+    "        print(f\"The file {path} has about {len(words)} words.\")\n",
+    "\n",
+    "# If a file exists → it prints the word count.\n",
+    "# If the file doesn’t exist → nothing happens, no error, no message."
    ]
   },
   {
@@ -895,14 +1050,6 @@
     "        print(f\"❌ {failed} TEST(S) FAILED\")\n",
     "    print(\"=\" * 60)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95f5dfb4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
